--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -16,8 +16,8 @@ $font-2: "font-2", serif;
 $font-3: "font-3", serif;
 
 $color-1: #9277ff;
-$color-2: #d7ccc8;
-$color-3: rgb(71, 93, 71);
+$color-2: #9b563b57;
+$color-3: rgb(40, 146, 40);
 $color-4: #fdeeee;
 $black: rgb(4, 3, 3);
 $white: rgb(253, 253, 253);
